Putting my current UCB page here too!

--- a/contact.html
+++ b/contact.html
@@ -23,31 +23,34 @@
 		<h1><a href="index.html">Isaac Shivvers</a></h1>
 		<p>UC Berkeley Astronomy</p>
 	</div>
-	
+
 	<div id="sidebar">
 		<ul>
-			<li><a class="current" href="index.html">basics</a></li>
+			<li><a href="index.html">basics</a></li>
 			<li><a href="research.html">research </a></li>
 			<li><a href="maps.html">galactic maps</a></li>
-            <li><a href="contact.html">contact me</a></li>
+            <li><a class="current" href="contact.html">contact me</a></li>
 		</ul>
 	</div>
 
 	<div id="content">
-		<h2>Isaac Shivvers</h2>
+		<h2>Contact me</h2>
 		<img class="alignleft border" src="img/me_headshot.gif" height="260" width="200" alt="Isaac Shivvers" />
-		<p>I'm a graduate student in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>.
-           I attended high school in Norwalk, IA before moving to Harvard for my undergraduate degree
-		   (Astrophysics and Earth &amp; Planetary Sciences) and then to Berkeley for my
-		   masters and PhD. studies in Astrophysics with
-		   <a href='http://astro.berkeley.edu/faculty-profile/alex-filippenko'>Prof. Alex Filippenko</a>.
-		</p></br>
+		<p><strong>email</strong>:<br/> 
+	    <a href="mailto:ishivvers@astro.berkeley.edu">ishivvers@astro.berkeley.edu</a></p>
+        <p><strong>office:</strong><br/> Campbell Hall 207<br/>
+        <p><strong>mail:</strong><br/>
+        Astronomy Department <br/>
+        University of California at Berkeley<br/>
+        501 Campbell Hall #3411 <br/>
+        Berkeley, CA 94720-3411</p>
+		
 	</div>
 
 	<div id="footer">
 		<p><span>&copy;  
 			<script type="text/javascript">
-			document.write ( new Date().getFullYear() );
+			document.write ( new Date().getFullYear() )
 			</script> Isaac Shivvers
 		</span></p>
 	</div>
