--- a/maps.html
+++ b/maps.html
@@ -26,22 +26,21 @@
 	
 	<div id="sidebar">
 		<ul>
-			<li><a class="current" href="index.html">basics</a></li>
+			<li><a href="index.html">basics</a></li>
 			<li><a href="research.html">research </a></li>
-			<li><a href="maps.html">galactic maps</a></li>
+			<li><a class="current" href="maps.html">galactic maps</a></li>
             <li><a href="contact.html">contact me</a></li>
 		</ul>
 	</div>
 
 	<div id="content">
-		<h2>Isaac Shivvers</h2>
-		<img class="alignleft border" src="img/me_headshot.gif" height="260" width="200" alt="Isaac Shivvers" />
-		<p>I'm a graduate student in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>.
-           I attended high school in Norwalk, IA before moving to Harvard for my undergraduate degree
-		   (Astrophysics and Earth &amp; Planetary Sciences) and then to Berkeley for my
-		   masters and PhD. studies in Astrophysics with
-		   <a href='http://astro.berkeley.edu/faculty-profile/alex-filippenko'>Prof. Alex Filippenko</a>.
-		</p></br>
+		<h2>Galactic Maps</h2>
+		<p>I love good infographics and interactive learning tools, and so I've prepared a set
+			of interactive webpages that illustrate humankind's history of time-domain astronomy research.
+			Check them out, and I hope that you enjoy them!</p>
+		<h3><a target="_blank" href="sne.html">A Visual History of Supernova Discovery</a></h3>
+		<h3><a target="_blank" href="grbs.html">A Visual History of Gamma-Ray Burst Discovery</a></h3>
+		<h3><a target="_blank" href="pulsars.html">A Map of Known Pulsars</a></h3>
 	</div>
 
 	<div id="footer">
