updating github page so it redirects to the appropriate place on UCB servers

--- a/maps.html
+++ b/maps.html
@@ -38,9 +38,9 @@
 		<p>I love good infographics and interactive learning tools, and so I've prepared a set
 			of interactive webpages that illustrate humankind's history of time-domain astronomy research.
 			Check them out, and I hope that you enjoy them!</p>
-		<h3><a target="_blank" href="sne.html">A Visual History of Supernova Discovery</a></h3>
-		<h3><a target="_blank" href="grbs.html">A Visual History of Gamma-Ray Burst Discovery</a></h3>
-		<h3><a target="_blank" href="pulsars.html">A Map of Known Pulsars</a></h3>
+		<h3><a target="_blank" href="http://w.astro.berkeley.edu/~ishivvers/sne.html">A Visual History of Supernova Discovery</a></h3>
+		<h3><a target="_blank" href="http://w.astro.berkeley.edu/~ishivvers/grbs.html">A Visual History of Gamma-Ray Burst Discovery</a></h3>
+		<h3><a target="_blank" href="http://w.astro.berkeley.edu/~ishivvers/pulsars.html">A Map of Known Pulsars</a></h3>
 	</div>
 
 	<div id="footer">
