--- a/research.html
+++ b/research.html
@@ -40,16 +40,15 @@
 		    using the Lick and Keck observatories to study the spectra of core-collapse supernovae and explore
 		    what they can tell us about massive stars and their deaths.</p>
 		<p>In my time at Berkeley I've rebuilt, updated, and maintained our supernova database (SNDB), which serves
-		    as both an internal research tool for the group and a public-facing data release and sharing mechanism.
-			<a href="http://heracles.astro.berkeley.edu/sndb/" target="_blank">The UC Berkeley/Filippenko Group SNDB</a>
+		    as both an internal research tool for the group and a public-facing data release and sharing mechanism:
+			<a href="http://heracles.astro.berkeley.edu/sndb/" target="_blank">the UC Berkeley/Filippenko Group SNDB.</a>
 		</p>
-		<p>I've recently worked alongside <a href="http://astro.berkeley.edu/~jbloom/" target="_blank">Prof. Josh Bloom</a> and
+		<p>In addition to my supernova studies,
+			I've recently worked alongside <a href="http://astro.berkeley.edu/~jbloom/" target="_blank">Prof. Josh Bloom</a> and
 			the <a href="http://cftd.info/" target="_blank">Center for Time-Domain Informatics</a> at UC Berkeley,
 			using modern machine-learning computational techniques to find rare and interesting objects in the
-			massive data sets of modern photometric surveys.  </p>
-			<!-- As part of that work, I created the 
-			<a href="photozpe.html" target="_blank">All-Sky Photometric Zeropoint Estimator</a>. -->
-	    <p>I'm also interested in instrument and code design, and I helped to design, build, and install
+			massive data sets of modern photometric surveys.
+			I'm also interested in instrument and code design, and in my time at Harvard I helped to design, build, and install
 			the spectroscopic sky probe on the <a href="http://pan-starrs.ifa.hawaii.edu/public/" target="_blank">Pan-STARRS1</a>
 			telescope on Mt. Haleakala, HI.</p></br>
 		
