updated cv; minor rephrasing updates

--- a/index.html
+++ b/index.html
@@ -36,11 +36,19 @@
 	<div id="content">
 		<h2>Isaac Shivvers</h2>
 		<img class="alignleft border" src="img/me_headshot.gif" height="260" width="200" alt="Isaac Shivvers" />
-		<p>I'm a graduate student in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>.
-           I attended high school in Norwalk, IA before moving to Harvard for my undergraduate degree
-		   (Astrophysics and Earth &amp; Planetary Sciences) and then to Berkeley for my
-		   masters and PhD. studies in Astrophysics with
-		   <a href='http://astro.berkeley.edu/faculty-profile/alex-filippenko'>Prof. Alex Filippenko</a>.
+		<p>I'm a graduate student in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>,
+		   working with <a href='http://astro.berkeley.edu/faculty-profile/alex-filippenko'>Prof. Alex Filippenko</a>.
+		</p>
+		<p>
+		   I study core-collapse supernovae via detailed studies of their spectra, obtained mostly from the
+		   <a href="https://www.ucolick.org/public/telescopes/shane.html">Shane Telescope at Lick Observatory</a>
+		   and the
+		   <a href="http://www.keckobservatory.org/about/telescopes">Keck Telescopes atop Mauna Kea</a>.
+		</p>
+		<p>
+			You can learn more about my research <a href="research.html">here</a>, you can explore some of 
+			the interactive astrophysical websites I've built <a href="maps.html">here</a>, or you can contact
+			me directly <a href="contact.html">here</a>!
 		</p></br>
 	</div>
 
