--- a/research.html
+++ b/research.html
@@ -44,8 +44,8 @@
 			<a href="http://heracles.astro.berkeley.edu/sndb/" target="_blank">the UC Berkeley/Filippenko Group SNDB.</a>
 		</p>
 		<p>In addition to my supernova studies,
-			I've recently worked alongside <a href="http://astro.berkeley.edu/~jbloom/" target="_blank">Prof. Josh Bloom</a> and
-			the <a href="http://cftd.info/" target="_blank">Center for Time-Domain Informatics</a> at UC Berkeley,
+			I've recently worked alongside <a href="http://astro.berkeley.edu/~jbloom/" target="_blank">Prof. Josh Bloom</a> 
+			and the Center for Time-Domain Informatics at UC Berkeley,
 			using modern machine-learning computational techniques to find rare and interesting objects in the
 			massive data sets of modern photometric surveys.
 			I'm also interested in instrument and code design, and in my time at Harvard I helped to design, build, and install
