updated language to reflect new career path

--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
 	<div id="content">
 		<h2>Isaac Shivvers</h2>
 		<img class="alignleft border" src="img/me_headshot.gif" height="260" width="200" alt="Isaac Shivvers" />
-		<p>I'm a graduate student in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>,
-		   working with <a href='http://astro.berkeley.edu/faculty-profile/alex-filippenko'>Prof. Alex Filippenko</a>.
-		</p>
 		<p>
+			I’m a data-driven scientist with a background in observational astrophysics,
+			and I’m looking to apply my skills to a new set of challenges.
+			Self-directed and deeply engaged, I have a proven track record in computationally-driven
+			scientific research utilizing machine learning and statistical modeling,
+			and I'm an experienced communicator of complex processes to non-technical audiences.
+		</p>
+		<p>I'm currently finishing my graduate studies in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>,
+		   working with <a href='http://astro.berkeley.edu/faculty-profile/alex-filippenko'>Prof. Alex Filippenko</a>.
 		   I study core-collapse supernovae via detailed studies of their spectra, obtained mostly from the
 		   <a href="https://www.ucolick.org/public/telescopes/shane.html">Shane Telescope at Lick Observatory</a>
 		   and the
