--- a/research.html
+++ b/research.html
@@ -36,7 +36,7 @@
 	<div id="content">
 		<h2>Astrophysics at UC Berkeley</h2>
 	  <img class="alignleft border" src="img/berkeley_seal_T.gif" height="220" width="220" alt="Berkeley Seal"/>
-	    <p>I'm working with <a href="http://astro.berkeley.edu/~alex/" target="_blank">Prof. Alex Filippenko</a>,
+	    <p>I work with <a href="http://astro.berkeley.edu/~alex/" target="_blank">Prof. Alex Filippenko</a>,
 		    using the Lick and Keck observatories to study the spectra of core-collapse supernovae and explore
 		    what they can tell us about massive stars and their deaths.</p>
 		<p>In my time at Berkeley I've rebuilt, updated, and maintained our supernova database (SNDB), which serves
@@ -55,7 +55,7 @@
 		<!-- <h3><a href="http://arxiv.org/find/all/1/all:+shivvers/0/1/0/all/0/1" target="_blank">Publications</a></h3></br> -->
 		<h3><a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?author=Shivvers" target="_blank">Publications</a></h3>
         </br>
-		<h3><a href="img/cv.pdf" target="_blank">CV</a></h3>
+		<h3><a href="img/cv.pdf" target="_blank">Academic CV</a></h3>
         </br>
         <h3><a href="https://github.com/ishivvers" target="_blank">GitHub</a></h3>
         </br>
