--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 		   <a href="http://www.keckobservatory.org/about/telescopes">Keck Telescopes atop Mauna Kea</a>.
 		</p>
 		<p>
-			You can learn more about my research <a href="research.html">here</a>, you can explore some of 
-			the interactive astrophysical websites I've built <a href="maps.html">here</a>, or you can contact
+			You can learn more about my research <a href="research.html">here</a>,
+			you can see my resume <a href="img/resume.pdf" target="_blank">here</a>,
+			you can explore some of the interactive astrophysical websites I've built <a href="maps.html">here</a>, or you can contact
 			me directly <a href="contact.html">here</a>!
 		</p></br>
 	</div>
