--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			I’m a data-driven scientist with a background in observational astrophysics,
 			and I’m looking to apply my skills to a new set of challenges.
 			Self-directed and deeply engaged, I have a proven track record in computationally-driven
-			scientific research utilizing machine learning and statistical modeling,
+			scientific research utilizing machine learning and statistical models,
 			and I'm an experienced communicator of complex processes to non-technical audiences.
 		</p>
 		<p>I'm currently finishing my graduate studies in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>,
