Post-graduation update.

--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
 		<h2>Isaac Shivvers</h2>
 		<img class="alignleft border" src="img/me_headshot.gif" height="260" width="200" alt="Isaac Shivvers" />
 		<p>
-			I’m a data-driven scientist with a background in observational astrophysics,
-			and I’m looking to apply my skills to a new set of challenges.
+			I’m a data-driven scientist with a background in observational astrophysics.
 			Self-directed and deeply engaged, I have a proven track record in computationally-driven
-			scientific research utilizing machine learning and statistical models,
+			research utilizing machine learning and statistical models,
 			and I'm an experienced communicator of complex processes to non-technical audiences.
 		</p>
-		<p>I'm currently finishing my graduate studies in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>,
+		<p>I recently finished my graduate studies in Astrophysics at <a href='http://astro.berkeley.edu/'>UC Berkeley</a>,
 		   working with <a href='http://astro.berkeley.edu/faculty-profile/alex-filippenko'>Prof. Alex Filippenko</a>.
-		   I study core-collapse supernovae via detailed studies of their spectra, obtained mostly from the
+		   I studied core-collapse supernovae via detailed studies of their spectra, obtained mostly from the
 		   <a href="https://www.ucolick.org/public/telescopes/shane.html">Shane Telescope at Lick Observatory</a>
 		   and the
 		   <a href="http://www.keckobservatory.org/about/telescopes">Keck Telescopes atop Mauna Kea</a>.
+		   Now I'm a data scientist with <a href="http://www.airware.com/">AirWare</a>.
 		</p>
 		<p>
-			You can learn more about my research <a href="research.html">here</a>,
-			you can see my resume <a href="img/resume.pdf" target="_blank">here</a>,
-			you can explore some of the interactive astrophysical websites I've built <a href="maps.html">here</a>, or you can contact
-			me directly <a href="contact.html">here</a>!
+			You can learn more about my astrophysics research <a href="research.html">here</a>,
+			you can find my LinkedIn page <a href="https://www.linkedin.com/in/ishivvers/" target="_blank">here</a>,
+			you can explore some of the interactive astrophysical websites I've built <a href="maps.html">here</a>,
+			or you can contact me directly <a href="contact.html">here</a>!
 		</p></br>
 	</div>
 
