--- a/research.html
+++ b/research.html
@@ -36,15 +36,15 @@
 	<div id="content">
 		<h2>Astrophysics at UC Berkeley</h2>
 	  <img class="alignleft border" src="img/berkeley_seal_T.gif" height="220" width="220" alt="Berkeley Seal"/>
-	    <p>I work with <a href="http://astro.berkeley.edu/~alex/" target="_blank">Prof. Alex Filippenko</a>,
+	    <p>During my Ph.D. I worked with <a href="http://astro.berkeley.edu/~alex/" target="_blank">Prof. Alex Filippenko</a>,
 		    using the Lick and Keck observatories to study the spectra of core-collapse supernovae and explore
 		    what they can tell us about massive stars and their deaths.</p>
-		<p>In my time at Berkeley I've rebuilt, updated, and maintained our supernova database (SNDB), which serves
+		<p>In my time at Berkeley I rebuilt, updated, and maintained our supernova database (SNDB), which serves
 		    as both an internal research tool for the group and a public-facing data release and sharing mechanism:
 			<a href="http://heracles.astro.berkeley.edu/sndb/" target="_blank">the UC Berkeley/Filippenko Group SNDB.</a>
 		</p>
 		<p>In addition to my supernova studies,
-			I've recently worked alongside <a href="http://astro.berkeley.edu/~jbloom/" target="_blank">Prof. Josh Bloom</a> 
+			I worked alongside <a href="http://astro.berkeley.edu/~jbloom/" target="_blank">Prof. Josh Bloom</a> 
 			and the Center for Time-Domain Informatics at UC Berkeley,
 			using modern machine-learning computational techniques to find rare and interesting objects in the
 			massive data sets of modern photometric surveys.
@@ -54,8 +54,6 @@
 		
 		<!-- <h3><a href="http://arxiv.org/find/all/1/all:+shivvers/0/1/0/all/0/1" target="_blank">Publications</a></h3></br> -->
 		<h3><a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?author=Shivvers" target="_blank">Publications</a></h3>
-        </br>
-		<h3><a href="img/cv.pdf" target="_blank">Academic CV</a></h3>
         </br>
         <h3><a href="https://github.com/ishivvers" target="_blank">GitHub</a></h3>
         </br>
