updated contact info and link destinations

--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,12 @@
 	<div id="content">
 		<h2>Contact me</h2>
 		<img class="alignleft border" src="img/me_headshot.gif" height="260" width="200" alt="Isaac Shivvers" />
-		<p><strong>email</strong>:<br/> 
-	    <a href="mailto:ishivvers@astro.berkeley.edu">ishivvers@astro.berkeley.edu</a></p>
-        <p><strong>office:</strong><br/> Campbell Hall 207<br/>
-        <p><strong>mail:</strong><br/>
-        Astronomy Department <br/>
-        University of California at Berkeley<br/>
-        501 Campbell Hall #3411 <br/>
-        Berkeley, CA 94720-3411</p>
-		
+		<p><strong>Email</strong>:<br/> 
+	    <a href="mailto:ishivvers@gmail.com">ishivvers@gmail.com</a></p>
+        <p><strong>Other</strong>:<br/>
+        <a href="https://www.linkedin.com/in/ishivvers/">LinkedIn</a><br/>
+        <a href="https://github.com/ishivvers">GitHub</a><br/>
+        </p>
 	</div>
 
 	<div id="footer">
