--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 </a>
               </h2>
               <p>
-                Data Scientist<br>
-                Deep Learning<br>
+ 	        Deep Learning<br>
                 Computer Vision<br>
-                Cloud Engineering
+		Cloud Engineering<br>
+		Business Intelligence
               </p>
               <a href="https://www.linkedin.com/in/ishivvers" target="_blank">
                 <img class="img-circle" src="img/In-2C-128px-TM.png" alt="LinkedIn" width="140" height="140">
