--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
 
           <div class="row shaded">
-            <div class="col-md-4">
+            <div class="col-sm-4">
               <h2>
                 <a href="https://www.linkedin.com/in/ishivvers" target="_blank">
                   Data Science
@@ -42,8 +42,8 @@
               <a href="https://www.linkedin.com/in/ishivvers" target="_blank">
                 <img class="img-circle" src="img/In-2C-128px-TM.png" alt="LinkedIn" width="140" height="140">
              </a>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-md-4">
+            </div><!-- /.col-sm-4 -->
+            <div class="col-sm-4">
               <h2>
                 <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?author=Shivvers" target="_blank">
                   Astrophysics Publications
@@ -58,8 +58,8 @@
               <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?author=Shivvers" target="_blank">
                 <img class="img-circle" src="img/berkeley_seal_T.gif" alt="UC Berkeley" width="140" height="140">
               </a>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-md-4">
+            </div><!-- /.col-sm-4 -->
+            <div class="col-sm-4">
               <h2>Galactic Maps</h2>
               <p>
                 <a href="http://www.ishivvers.com/maps/sne.html" target="_blank">
@@ -75,7 +75,7 @@
               <a href="http://www.ishivvers.com/maps/sne.html" target="_blank">
                 <img class="img-circle" src="img/crabmosaic_hst.jpg" alt="Galactic Maps" width="140" height="140">
               </a>
-            </div><!-- /.col-lg-4 -->
+            </div><!-- /.col-sm-4 -->
           </div><!-- /.row -->
 
           <div class="mastfoot">
