updated link to new ADS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div><!-- /.col-sm-4 -->
             <div class="col-sm-4">
               <h2>
-                <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?author=Shivvers" target="_blank">
+                <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22shivvers%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" target="_blank">
                   Astrophysics Publications
                 </a>
               </h2>
@@ -55,7 +55,7 @@
                 Stripped Envelope Supernovae<br>
                 Gamma-Ray Bursts<br>
               </p>
-              <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?author=Shivvers" target="_blank">
+              <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22shivvers%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" target="_blank">
                 <img class="img-circle" src="img/berkeley_seal_T.gif" alt="UC Berkeley" width="140" height="140">
               </a>
             </div><!-- /.col-sm-4 -->
